--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -35,9 +35,9 @@
     <feature name="Vibration">
         <param name="android-package" value="org.apache.cordova.vibration.Vibration" />
     </feature>
-    <name>helloworld</name>
+    <name>sdv phonegap 1</name>
     <description>
-        Hello World sample application that responds to the deviceready event.
+        test app phonegap.
     </description>
     <author email="support@phonegap.com" href="http://phonegap.com">
         PhoneGap Team
