--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -48,6 +48,7 @@
     </author>
     <content src="index.html" />
     <access origin="http://fuoriserie.altervista.org" />
+    <access origin="https://cdnjs.cloudflare.com" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
     <allow-intent href="tel:*" />
