--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -7,6 +7,7 @@ body{
   background-color: #f5f5f5;
   font-family: "Poppins", sans-serif;
   font-size:18px;
+  margin:0;
 }
 #preloader{
   background-color: rgb(47, 47, 47);
