--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -47,7 +47,8 @@
         Simone De Vita
     </author>
     <content src="index.html" />
-    <access origin="*" />
+    <access origin="http://fuoriserie.altervista.org" />
+    <access origin="https://cdnjs.cloudflare.com" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
     <allow-intent href="tel:*" />
