--- a/www/css/index.css
+++ b/www/css/index.css
@@ -7,7 +7,20 @@ body{
   background-color: #f5f5f5;
   font-family: "Poppins", sans-serif;
   font-size:18px;
-  margin:0;
+  margin:0 0 50px;
+}
+.header {
+  display: block;
+  width: 100%;
+  position: relative;
+  height: 50px;
+  background-color: #007396;
+  padding: 10px 0;
+  text-align: center;
+}
+img.logo {
+  height: 50px;
+  border-radius: 50%;
 }
 #preloader{
   background-color: rgb(47, 47, 47);
@@ -28,16 +41,19 @@ body{
   display:block;
   position:relative;
 }
-.menu{
+.menu {
   background-color: #007396;
   color: white;
-  margin-bottom: 30px;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
 }
 .menu div{
   width: 49%;
   text-align: center;
   display: inline-block;
-  padding: 15px 0;
+  padding: 5px 0;
 }
 .menu div:first-child{
   border-right: 1px solid #016d8e;
@@ -45,7 +61,7 @@ body{
 .menu a{
   text-align: center;
   color: white;
-  font-size:26px;
+  font-size:16px;
 }
 .page-container{
   padding-left: 15px;
@@ -62,8 +78,12 @@ body{
   background-color: #007396;
   color: white;
 }
-.form-group input[type="text"]{
-  margin-top: 15px;
+label{
+  display:block;
+  margin: 15px 0 0;
+}
+.form-group input[type="text"],.form-group input[type="password"]{
+  margin-top: 5px;
   background-color: white;
   padding: 8px 10px;
   border-radius: 5px;
@@ -71,4 +91,14 @@ body{
   width: 90%;
   position: relative;
   max-width: 500px;
+  display:block;
+}
+.single-order {
+  padding: 8px;
+  background-color: #007396;
+  color: whitesmoke;
+  font-size: 14px;
+}
+.single-order:nth-of-type(even) {
+  background-color: #484848;
 }
