--- a/platforms/android/app/src/main/assets/www/css/index.css
+++ b/platforms/android/app/src/main/assets/www/css/index.css
@@ -23,7 +23,7 @@ img.logo {
   border-radius: 50%;
 }
 #preloader{
-  background-color: rgb(47, 47, 47);
+  background-color: white;
   position:fixed;
   left:0;
   right:0;
