--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -82,7 +82,7 @@ label{
   display:block;
   margin: 15px 0 0;
 }
-.form-group input[type="text"],.form-group input[type="password"]{
+.form-group input[type="text"],.form-group input[type="password"], select{
   margin-top: 5px;
   background-color: white;
   padding: 8px 10px;
